style/indexstyle.css
/* TO DO */
/* Fix padding issue on all images - side scrollwheel appearing when it should not - FIXED: removed padding entriely and hidden scrollbars */
/* Implement 3 slided menu showcasing work, make it adaptable to webm 1:1 video */
/* Implement dynamic eye-catching background */

* {
  margin: 0;
  padding: 0;
}

:root {
  --primarycolor: #222;
  --secondarycolor: #eee;
  --primaryfont: 'Franklin Gothic Medium',
    'Arial Narrow',
    Arial,
    sans-serif;
  --secondaryfont: 'Gill Sans',
    'Gill Sans MT',
    Calibri,
    'Trebuchet MS',
    sans-serif;
}

body {
  background-color: var(--secondary); 
}

h1 {
  font-size: 2rem;
}

p {
  font-size: 1.2rem;
}

header {
  display: flex;
  height: 10vh;
  background-color: var(--primarycolor);
}

article {
  display: block;
  height: 80vh;
  background-color: var(--secondary);
}

footer { 
  display: flex;
  height: 10vh;
  background-color: var(--primarycolor);
}

.primarycolor {
  color: var(--primarycolor);
}

.secondarycolor {
  color: var(--secondarycolor);
}

.primaryfont {
  font-family: var(--primaryfont);
}

.secondaryfont {
  font-family: var(--secondaryfont);
}

#logo, #face {
  height: 8vh;
  padding: 1vh;
}

.container {
  display: flex;
  /* background-color: aqua; */
  margin: auto;
}

.canvas {
  border-radius: 30px;
  display: flex;
  margin-top: 4vh;
  margin-bottom: 4vh;
  height: 72vh;
  width: 100%;
  background-color: rgba(34, 34, 34, 0.8)
}

.canvasleft {
  border-radius: 30px;
  display: inline-block;
  align-content: center;
  background-color: black;
  overflow: scroll;
  scrollbar-width: none;
  height: 100%;
  width: 50%;
}

.canvasright {
  display: inline-block;
  box-sizing: border-box;
  align-content: center;
  padding: 50px;
  overflow: scroll;
  scrollbar-width: none;
  height: 100%;
  width: 50%;
}

#video1 {
  width: 100%;
  height: 100%;
}

#buttons {
    position: absolute;
    padding: 0;
    left: 0;
    right: 0;
    top: 86.5vh;
    margin-left: auto;
    margin-right: auto;
    width: 100px;
}

.horizontal-center {
  align-items: center;
}

.right-align {
  justify-content: end;
}

/* image size guide */
/* sizes calculated with assumed 10px padding on all sides (except for xs) */
/* xs - width =  48%*/
/* s - width =  250px*/
/* m - width =  340px*/
/* l - width =  460px*/
/* xl - width =  550px*/
/* xxl - width = 640px */

/* xs */
@media screen and (max-width: 576px) {
  .container{
    width: 100%;
  }
   
  .projectimgsxs{
    max-width: 100%;
  }

  .projectimgsxs {
    display: inline-block;
  }
  .projectimgxxl, .projectimgxl, .projectimgl, .projectimgm {
    display: none;
  }
}

/* s */
@media screen and (min-width: 576px) and (max-width: 768px) {
  .container {
      width: 540px;
    }
    .projectimgsxs {
    display: flex;
    max-width: 250px;
    max-height: 250px;
    margin: auto;
    }
    .projectimgxxl,
    .projectimgxl,
    .projectimgl,
    .projectimgm
    {
      display: none;
    }
}

/* m */
@media screen and (min-width: 768px) and (max-width: 992px) {
  .container {
      width: 720px;
    }
  .projectimgm {
    display: flex;
    max-width: 340px;
    max-height: 340px;
    margin: auto;
  }
  
  .projectimgxxl,
  .projectimgxl,
  .projectimgl,
  .projectimgsxs {
    display: none;
  }
}

/* l */
@media screen and (min-width: 992px) and (max-width: 1200px) {
  .container {
      width: 960px;
    }
    .projectimgl{
    display: flex;
    max-width: 460px;
    max-height: 460px;
    margin: auto;
  }
  
  .projectimgxxl,
  .projectimgxl,
  .projectimgm,
  .projectimgsxs {
    display: none;
  }
}

/* xl */
@media screen and (min-width: 1200px) and (max-width: 1400px) {
  .container {
      width: 1140px;
    }

  .projectimgxl{
    display: flex;
    max-width: 550px;
    max-height: 550px;
    margin: auto;
  }
  
  .projectimgxxl,
  .projectimgl,
  .projectimgm,
  .projectimgsxs {
    display: none;
  }
}

/* xxl */
@media screen and (min-width: 1400px) {
  .container {
      width: 1320px;
    }

.projectimgxxl{
    display: flex;
    max-width: 640px;
    max-height: 640px;
    margin: auto;
  }
  
  .projectimgxl,
  .projectimgl,
  .projectimgm,
  .projectimgsxs {
    display: none;
  }
}

